Kubernetes/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
      app: web
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ghcr.io/canastawiki/canasta:1.1.1
        resources: {}
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/mediawiki/w/extensions
          name: config-data
          subPath: ./extensions
        - mountPath: /var/www/mediawiki/w/skins
          name: config-data
          subPath: ./skins
        - mountPath: /mediawiki/config
          name: canasta-config
        - mountPath: /mediawiki/config/settings
          name: canasta-settings
        - mountPath: /mediawiki/images
          name: config-data
          subPath: ./images
        - name: sitemap-data
          mountPath: /mediawiki/sitemap
      volumes:
          - name: canasta-config
            configMap:
              name: canasta-config
          - name: canasta-settings
            configMap:
              name: canasta-settings
          - name: config-data
            persistentVolumeClaim:
              claimName: config-data
          - name: sitemap-data
            persistentVolumeClaim:
              claimName: sitemap-data
